--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,14 @@
   <body>
 
     <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
+          <h1 id="project_title">Effects of Road Closure on the MacArthur Maze</h1>
+          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+        </header>
+    </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
